--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "gatsby": "^2.23.12",
-    "gatsby-image": "^2.4.9",
+    "gatsby-image": "^2.4.12",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
-    "gatsby-plugin-sharp": "^2.6.14",
-    "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-sharp": "^2.5.7",
+    "gatsby-plugin-sharp": "^2.6.17",
+    "gatsby-source-filesystem": "^2.3.18",
+    "gatsby-source-instagram": "^0.8.0",
+    "gatsby-source-wordpress": "^3.3.15",
+    "gatsby-transformer-sharp": "^2.5.10",
+    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "urijs": "^1.19.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
